css/index-combined-navigation-autoplay.css
/* ... */
/* First line of the 'X' */
.close-btn .x-line::before {
  transform: translate(-50%, -50%) rotate(45deg);
}

/* Second line of the 'X' */
.close-btn .x-line::after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

/* Increases clickable area of close button, pencil, add new caption text and options button to prevent accidently turning the title row on or off  */
.close-btn::before,
.pencil-container::before,
.add-new-caption::before,
.options-btn::before {
  content: "";
  position: absolute;
  top: -20px;
  bottom: -20px;
  left: -20px;
  right: -20px;
  background: transparent;
  pointer-events: auto;
}

.close-btn,
.options-btn {
  position: absolute;
}

.pencil-title-row {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 28px;
}

.pencil-container {
  position: relative;
  display: inline-block;
  cursor: pointer;
}

.title-row .pencil {
  cursor: pointer;
  height: 18px;
  width: auto;
  margin-right: -14px;
  position: relative;
  z-index: 200;
  /* Multiple Drop Shadows to match media-item-title  */
  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5))
    drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3))
    drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
}

.title-row .add-new-caption {
  position: relative;
  cursor: pointer;
  z-index: 200;
  display: inline-block;
  padding: 14px;
}

.title-row .media-item-title {
  font-weight: 400;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: white;
  letter-spacing: 0.05rem;
  margin-left: 10px;
  margin-right: 10px;
  /* same text shadow as pencil and title-row-bottom text */
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5),
    /* Primary shadow */ 2px 2px 4px rgba(0, 0, 0, 0.3),
    /* Secondary shadow */ 0px 0px 5px rgba(0, 0, 0, 0.25); /* Glow effect */
}

/* Options button with 3 Vertical Dots */
.options-btn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  position: absolute;
  right: 9px;
  cursor: pointer;
  border: none;
  gap: 0.158rem;
}

/* The 3 Vertical Dots inside Options button */
.dot {
  width: 4px;
  height: 4px;
  background-color: white;
  border-radius: 50%;
}

/* Dropdown from Options button */
/* Initially hide links */
.options-dropdown {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  background-color: rgba(0, 0, 0, 0.9);
  color: white;
  border: 1px solid rgba(128, 128, 128, 0.6);
  padding: 20px 4px 18px 4px;
  border-radius: 4px;
  position: fixed;
  width: 220px;
  z-index: 1000;
  transition: opacity 0.3s ease, transform 0.3s ease;
  display: none;
}

.swiper-vertical-options-dropdown {
  position: fixed;
  top: 10px;
  right: 10px;
}

/* List of Links in the dropdown from Options button */
.options-dropdown li {
  display: block;
  padding: 6px 20px;
  color: white;
  text-decoration: none;
  margin-top: 2px;
  cursor: pointer;
}

.options-dropdown li:hover {
  background-color: #3f3f3f;
}

.options-dropdown.open {
  display: flex;
  opacity: 1;
  transform: translateY(0);
}

/* Options dropdown Close Button (X) */
.dropdown-close-btn {
  position: absolute;
  top: 2px;
  right: 8px;
  background: none;
  border: none;
  color: white;
  font-size: 26px;
  cursor: pointer;
  padding: 4px 8px 5px 5px;
}

/* Bottom Footer with play / pause autoplay button and bubble that show which item we're on / total number of items in post, message or album. */
.title-row-bottom {
  height: 60px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-top: -18px;
}

/* Play/Pause Toggle Button */
.autoplay-toggle {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  left: 9px;
  width: 28px;
  height: 28px;
  background: transparent;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
  overflow: visible;
  z-index: 200;
}

/* Inner Visual Button */
.autoplay-toggle::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  width: 28px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 100;
}

/* .green-play::before {
  border: 2px solid #16b14f;
}  */

/* Increases clickable area of play and pause button to prevent accidently turning the title row on or off  */
.autoplay-toggle::after {
  content: "";
  position: absolute;
  top: -20px;
  left: -20px;
  width: 48px;
  height: 48px;
  background: transparent;
  pointer-events: auto;
  cursor: pointer;
}

/* SVG Icon Styles */
.autoplay-toggle .icon {
  position: absolute;
  top: 50%;
  left: 50%;
  opacity: 0;
  /* transform: translate(-50%, -50%); */
  transition: opacity 0.3s ease, transform 0.3s ease;
  pointer-events: none;
  z-index: 300;
}

/* Play Icon */
.autoplay-toggle .play-icon {
  opacity: 1; /* Visible by default */
  transform: translate(-50%, -50%) translateX(2px);
}

/* Pause Icon */
.autoplay-toggle .pause-icon {
  opacity: 0;
  transform: translate(-50%, -50%) translateX(1px);
}

/* When Playing, show Pause Icon and hide Play Icon */
.autoplay-toggle.playing .play-icon {
  opacity: 0; /* Hide Play icon */
}

.autoplay-toggle.playing .pause-icon {
  opacity: 1; /* Show Pause icon */
}

/* SVG Paths */
.autoplay-toggle .icon polygon,
.autoplay-toggle .icon rect {
  fill: white;
}

/* Hide Play/Pause Button on Non-Active Slides */
.swiper-slide:not(.swiper-slide-active) .autoplay-toggle {
  display: none;
}

.number-of-items-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 2px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 14px;
  position: absolute;
  right: 9px;
  border: none;
}
/* ... */

